[gd_scene load_steps=10 format=3 uid="uid://drpuks8r7wifr"]

[ext_resource type="Script" path="res://Enemies/EnemyShip/EnemyShip.gd" id="1_hwvh7"]
[ext_resource type="PackedScene" uid="uid://cm5wfph8jbxdj" path="res://Stats/Stats.tscn" id="2_djy5u"]
[ext_resource type="PackedScene" uid="uid://bnvaryoi0a5db" path="res://Effects/Explosion_2/Explosion_2.tscn" id="2_x73h4"]
[ext_resource type="Texture2D" uid="uid://dpssaijuwg3ed" path="res://Enemies/EnemyShip/EnemySprite.png" id="3_6ojy7"]
[ext_resource type="PackedScene" uid="uid://ye6sscbkfm3t" path="res://Interaction Boxes/HurtBox.tscn" id="4_pfiib"]
[ext_resource type="PackedScene" uid="uid://c485f0w3fc2fr" path="res://Interaction Boxes/HitBox.tscn" id="5_yuc51"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rgntr"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_pbdhc"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fl41r"]
radius = 11.0

[node name="EnemyShip" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 4
script = ExtResource("1_hwvh7")
rotation_speed = 5.0
distance_for_attack = 180
DeathEffect = ExtResource("2_x73h4")

[node name="Stats" parent="." instance=ExtResource("2_djy5u")]
max_health = 2

[node name="MainSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_6ojy7")

[node name="ShootTimer" type="Timer" parent="."]

[node name="MainCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_rgntr")

[node name="HurtBox" parent="." instance=ExtResource("4_pfiib")]
collision_layer = 16
collision_mask = 66

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_pbdhc")

[node name="HitBox" parent="." instance=ExtResource("5_yuc51")]
collision_layer = 4
collision_mask = 258

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_fl41r")

[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]

[editable path="HurtBox"]
[editable path="HitBox"]
